# Beuro-AI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  main.cpp
Admin_command/: Database.cpp
Header/: Beuro-proto.h  BeuroAI.h
Header/Beuro/: BeuroAI.h  BeuroRAG.h
Header/Proto/: Beuro-proto.h
Tests/: Admin.cpp  Beuro-proto.cpp  testAdmin.cpp  testBeuroDB.cpp
Tests/src_test/: Admin.cpp  BeuroDB.cpp
src/: Admin.cpp  BeuroAI.cpp  BeuroDB.cpp
